simplify stream to list conversion
verinice-veo#1116